[Thesis] Adding chapters on measurement platforms (#210)
Adds references and chapters for platforms on RIPE Atlas, CF Radar and
N2YO.

--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -39,8 +39,13 @@
   year = {2020},
 }
 
-@article{Aleksic2010,
-  abstract = {Wired broadband access can be realized using various technologies
+@Article{Aleksic2010,
+  author     = {Slavi{\v s}a Aleksic and Ana Lovric},
+  journal    = {2010 7th International Symposium on Communication Systems, Networks and Digital Signal Processing, CSNDSP 2010},
+  title      = {Power consumption of wired access network technologies},
+  year       = {2010},
+  pages      = {147-151},
+  abstract   = {Wired broadband access can be realized using various technologies
               , configurations and protocols. It is widely deployed and able to
               provide both high data rates and high reliability. These features
               are of strong importance for many advanced applications. Since the
@@ -54,16 +59,10 @@
               line (DSL), 1 Gbit/s and 10 Gbit/s point-to-point Ethernet and
               passive optical networks (1G-PON and 10G-PON) are shown. {
               \copyright} 2010 IEEE.},
-  author = {Slavi{\v s}a Aleksic and Ana Lovric},
-  doi = {10.1109/CSNDSP16145.2010.5580441},
-  isbn = {9781861353696},
-  journal = {2010 7th International Symposium on Communication Systems, Networks
-             and Digital Signal Processing, CSNDSP 2010},
-  pages = {147-151},
-  publisher = {IEEE Computer Society},
-  title = {Power consumption of wired access network technologies},
-  year = {2010},
   bdsk-url-1 = {https://doi.org/10.1109/CSNDSP16145.2010.5580441},
+  doi        = {10.1109/CSNDSP16145.2010.5580441},
+  isbn       = {9781861353696},
+  publisher  = {IEEE Computer Society},
 }
 
 @article{Kassas2023,
@@ -460,6 +459,56 @@
            broadband network},
   month = jun,
   year = {2024},
+}
+
+@InProceedings{DBLP:conf/sigcomm/VasishtSC21,
+  author    = {Deepak Vasisht and Jayanth Shenoy and Ranveer Chandra},
+  booktitle = {{ACM} {SIGCOMM} 2021 Conference, Virtual Event, USA, August 23-27, 2021},
+  title     = {{L2D2:} low latency distributed downlink for {LEO} satellites},
+  year      = {2021},
+  editor    = {Fernando A. Kuipers and Matthew C. Caesar},
+  pages     = {151--164},
+  publisher = {{ACM}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/sigcomm/VasishtSC21.bib},
+  doi       = {10.1145/3452296.3472932},
+  timestamp = {Sun, 02 Oct 2022 16:15:05 +0200},
+  url       = {https://doi.org/10.1145/3452296.3472932},
+}
+
+@Misc{CloudflareRadarDocsIQI,
+  author   = {Cloudflare},
+  title    = {Cloudflare Radar Docs Glossary: Internet Quality Index},
+  keywords = {Documentation,Cloudflare Radar,IQI},
+}
+
+@Article{DavidBelson2023,
+  author    = {David Belson, Carlos Rodrigues},
+  journal   = {The Cloudflare Blog},
+  title     = {Introducing the Cloudflare Radar Internet Quality Page},
+  year      = {2023},
+  month     = jun,
+  keywords  = {Clouflare Radar,IQI},
+  timestamp = {2024-09-17},
+  url       = {https://blog.cloudflare.com/introducing-radar-internet-quality-page/},
+}
+
+@Misc{CloudflareGlobalNetwork2024,
+  author       = {Cloudflare},
+  howpublished = {Cloudflare Website},
+  month        = sep,
+  title        = {The Global Cloudflare-Network},
+  year         = {2024},
+}
+
+@Misc{rootservers092024,
+  author       = {root-servers.org},
+  howpublished = {Website},
+  month        = sep,
+  title        = {Root Servers},
+  year         = {2024},
+  keywords     = {Map,Root Servers},
+  url          = {https://root-servers.org/},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
