Switching order of appendix and conclusion

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -66,6 +66,9 @@
 %	- Limitation of Black-Box approach (no insight in Starlink intrinsics)
 
 % Conclusion
+\chapter{Conclusions \& Outlook}
+\input{conclusions/conclusions}
+
 
 % Appendix
 \chapter{Appendix}
