Restructuring of Thesis

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -46,10 +46,22 @@
 %	- TODO(robert): What more?
 \chapter{Results}
 
+\section{Performance of Networked Satellite Systems}
+
+%
+%	Performance
+%
+
 % Latency
 \input{./chapters/4-results/latency/complete-time-range-2022to2024.tex}
 \input{./chapters/4-results/latency/individual-days.tex}
 \input{./chapters/4-results/latency/per-month.tex}
+
+\section{Resilience of Networked Satellite Systems}
+
+%
+%	Resilience
+%
 
 % Disconnect Events
 \input{./chapters/4-results/disconnect_events/disconnect-events.tex}
