--- a/tex/thesis/packages_and_commands/user-defined_commands.tex
+++ b/tex/thesis/packages_and_commands/user-defined_commands.tex
@@ -6,3 +6,6 @@
 \newtcolorbox[auto counter,number within=section]{takeaway}[2][]{%
 	fonttitle=\bfseries, title=Takeaway: #2
 }
+
+\captionsetup[subfigure]{justification=centering}
+
