Data and Chapter on Packet Loss

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -57,6 +57,9 @@
 \input{./chapters/4-results/latency/individual-days.tex}
 \input{./chapters/4-results/latency/per-month.tex}
 
+% Packet Loss
+\input{./chapters/4-results/packet-loss/complete-time-range-2022to2024.tex}
+
 \section{Resilience of Networked Satellite Systems}
 
 %
