Added citation for ditameter of Starlink beams

--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -511,4 +511,13 @@
   url          = {https://root-servers.org/},
 }
 
+@Article{Pekhterev2021,
+  author   = {Sergei Pekhterev},
+  journal  = {SatMagazine},
+  title    = {The Bandwidth Of The StarLink Constellation...and the assessment of its potential subscriber base in the USA.},
+  year     = {2021},
+  month    = nov,
+  keywords = {Satellites,Beam,Beam Radius,Throughput},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
