Observations of correlation of (Kp index, latency)

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -69,11 +69,16 @@
 % Disconnect Events
 \input{./chapters/4-results/disconnect_events/disconnect-events.tex}
 
+% Solarmagnetic Storms
+\input{./chapters/4-results/solarmagnetic-storms/storms.tex}
+
 % Correlation of Packet Loss and Latency
 \input{./chapters/4-results/latency-packet-loss-correlation.tex}
 
 % Routing
 \input{./chapters/4-results/starlink-traceroutes.tex}
+
+
 
 % Limitations and Future Work
 %	- Limitation of Probe Availability (only selected ones on RIPE Atlas)
