--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -520,4 +520,26 @@
   keywords = {Satellites,Beam,Beam Radius,Throughput},
 }
 
+@Article{Bartels1957,
+  author  = {Julius Bartels},
+  journal = {Proceedings of the National Academy of Sciences},
+  title   = {Solar Influences of Geomagnetism},
+  year    = {1957},
+  number  = {1},
+  pages   = {75-81},
+  volume  = {43},
+  doi     = {10.1073/pnas.43.1.75},
+  eprint  = {https://www.pnas.org/doi/pdf/10.1073/pnas.43.1.75},
+  url     = {https://www.pnas.org/doi/abs/10.1073/pnas.43.1.75},
+}
+
+@Misc{GFZ2023,
+  author       = {Helmholtz-Zentrum Potsdam - Deutsches GeoForschungsZentrum GFZ},
+  howpublished = {Website},
+  title        = {Geomagnetic Kp index},
+  year         = {2023},
+  keywords     = {Data,Solarmagnetic Storms},
+  url          = {https://kp.gfz-potsdam.de/en/},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
