Related Work chapter

--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -65,57 +65,18 @@
   publisher  = {IEEE Computer Society},
 }
 
-@article{Kassas2023,
-  author = {Zaher M. Kassas and Sharbel Kozhaya and Haitham Kanj and Joe
-            Saroufim and Samer W. Hayek and Mohammad Neinavaie and Nadim
-            Khairallah and Joe Khalife},
-  journal = {2023 IEEE/ION Position, Location and Navigation Symposium, PLANS
-             2023},
-  title = {Navigation with Multi-Constellation LEO Satellite Signals of
-           Opportunity: Starlink, OneWeb, Orbcomm, and Iridium},
-  year = {2023},
-  pages = {338-343},
-  abstract = {This paper summarizes current state-of-the-art navigation results
-              with multi-constellation low Earth orbit (LEO) satellite signals of
-              opportunity. Experimental results with four LEO satellite
-              constellations are presented: Starlink, OneWeb, Orbcomm, and
-              Iridium. Two receiver designs are presented: (R1) a cognitive
-              opportunistic navigation approach, which utilizes minimal, publicly
-              available prior knowledge about the LEO satellite signal structure
-              and (R2) a blind approach, which assumes no prior knowledge of the
-              signals. Stationary positioning and mobile ground vehicle
-              navigation results are presented. For the ground vehicle, results
-              with two frameworks are presented: (N1) a LEO-aided inertial
-              navigation system (INS) simultaneous tracking and navigation (STAN)
-              and (N2) a LEO-aided differential STAN. The results reveal the
-              tremendous promise of exploiting multi-constellation LEO satellite
-              signals of opportunity for navigation. For positioning: (i) with R1
-              , starting with an initial estimate about 179 km away, by
-              exploiting signals from 6 Starlink, 1 Orbcomm, and 4 Iridium, a
-              final two-dimensional (2-D) position error of 6.5 m was achieved
-              and (ii) with R2, starting with an initial estimate about 3,600 km
-              away, by exploiting signals from 4 Starlink, 2 OneWeb, 1 Orbcomm,
-              and 1 Iridium, a final 2-D position error of 5.1 m was achieved.
-              For navigation, a ground vehicle was equipped with an
-              industrial-grade inertial measurement unit (IMU) and an altimeter.
-              (i) With R1 and N1, the vehicle traversed 4.15 km in 150 seconds
-              (GNSS signals were only available for the first 2.33 km). By
-              exploiting signals from 3 Starlink, 2 Orbcomm, and 1 Iridium, the
-              3-D position root mean squared error (RMSE) and final 3-D error
-              were 18.4 m and 27.1 m, respectively. The GNSS-aided INS position
-              RMSE and final 3-D error were 118.5 m and 472.7 m, respectively.
-              (ii) With R2 and N2, the vehicle traversed 1.03 km in 110 seconds
-              (GNSS signals were only available for the first 0.11 km). By
-              exploiting signals from 4 Starlink, 1 OneWeb, 2 Orbcomm, and 1
-              Iridium, the 3-D position RMSE and final 3-D error were 9.5 m and
-              4.4 m, respectively. The GNSS-aided INS position RMSE and final 3-D
-              error were 205 m and 525 m, respectively.},
-  bdsk-url-1 = {https://doi.org/10.1109/PLANS53410.2023.10140066},
-  doi = {10.1109/PLANS53410.2023.10140066},
-  isbn = {9781665417723},
-  keywords = {Doppler tracking,OneWeb,Positioning,Starlink,signals of
-              opportunity,LEO,Navigation},
-  publisher = {Institute of Electrical and Electronics Engineers Inc.},
+@InProceedings{DBLP:conf/plans/KassasKKSHNKK23,
+  author    = {Zaher M. Kassas and Sharbel E. Kozhaya and Haitham Kanj and Joe Saroufim and Samer Watchi Hayek and Mohammad Neinavaie and Nadim Khairallah and Joe Khalife},
+  booktitle = {{IEEE/ION} Position, Location and Navigation Symposium, {PLANS} 2023, Monterey, CA, USA, April 24-27, 2023},
+  title     = {Navigation with Multi-Constellation {LEO} Satellite Signals of Opportunity: Starlink, OneWeb, Orbcomm, and Iridium},
+  year      = {2023},
+  pages     = {338--343},
+  publisher = {{IEEE}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/plans/KassasKKSHNKK23.bib},
+  doi       = {10.1109/PLANS53410.2023.10140066},
+  timestamp = {Sun, 08 Oct 2023 18:45:28 +0200},
+  url       = {https://doi.org/10.1109/PLANS53410.2023.10140066},
 }
 
 @article{Henry2002,
@@ -533,13 +494,173 @@
   url     = {https://www.pnas.org/doi/abs/10.1073/pnas.43.1.75},
 }
 
-@Misc{GFZ2023,
+@Misc{GF2023,
   author       = {Helmholtz-Zentrum Potsdam - Deutsches GeoForschungsZentrum GFZ},
   howpublished = {Website},
   title        = {Geomagnetic Kp index},
   year         = {2023},
   keywords     = {Data,Solarmagnetic Storms},
   url          = {https://kp.gfz-potsdam.de/en/},
+}
+
+@Article{DBLP:journals/cm/LinCCCHB21,
+  author    = {Xingqin Lin and Stefano Cioni and Gilles Charbit and Nicolas Chuberre and Sven Hellsten and Jean{-}Francois Boutillon},
+  journal   = {{IEEE} Commun. Mag.},
+  title     = {On the Path to 6G: Embracing the Next Wave of Low Earth Orbit Satellite Access},
+  year      = {2021},
+  number    = {12},
+  pages     = {36--42},
+  volume    = {59},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/cm/LinCCCHB21.bib},
+  doi       = {10.1109/MCOM.001.2100298},
+  timestamp = {Tue, 21 Mar 2023 21:09:03 +0100},
+  url       = {https://doi.org/10.1109/MCOM.001.2100298},
+}
+
+@Article{Lab2024,
+  author   = {RightsLabDigital},
+  journal  = {GlobalVoices},
+  title    = {Starlink in Sudan: A lifeline or war facilitator?},
+  year     = {2024},
+  month    = aug,
+  keywords = {Starlink,Ethical,War},
+  url      = {https://globalvoices.org/2024/08/20/starlink-in-sudan-a-lifeline-or-war-facilitator/#:~:text=Starlink's strategic role in conflict zones&text=It is also used in,hotspots affected by armed conflict.},
+}
+
+@Article{Walsh2024,
+  author   = {Nick Paton Walsh; Alex Marquardt; Florence Davey-Attlee},
+  journal  = {CNN World},
+  title    = {Ukraine relies on Starlink for its drone war. Russia appears to be bypassing sanctions to use the devices too},
+  year     = {2024},
+  month    = mar,
+  keywords = {Starlink,Ukraine,Russia,War},
+}
+
+@Article{bojor2024emerging,
+  author  = {Bojor, Laviniu and Petrache, Tudoric{\u{a}} and Cristescu, Cristian},
+  journal = {Land Forces Academy Review},
+  title   = {Emerging Technologies in Conflict: The Impact of Starlink in the Russia--Ukraine War},
+  year    = {2024},
+  number  = {2},
+  pages   = {185--194},
+  volume  = {29},
+}
+
+@Article{Abels2024,
+  author    = {Abels, Joscha},
+  journal   = {European Journal of International Relations},
+  title     = {Private infrastructure in geopolitical conflicts: the case of Starlink and the war in Ukraine},
+  year      = {2024},
+  issn      = {1460-3713},
+  month     = jun,
+  doi       = {https://doi.org/10.1177/13540661241260653},
+  publisher = {SAGE Publications},
+}
+
+@Article{Izhikevich2024,
+  author    = {Izhikevich, Liz and Enghardt, Reese and Huang, Te-Yuan and Teixeira, Renata},
+  title     = {A Global Perspective on the Past, Present, and Future of Video Streaming over Starlink},
+  year      = {2024},
+  copyright = {Creative Commons Attribution 4.0 International},
+  doi       = {https://doi.org/10.48550/arXiv.2409.09846},
+  keywords  = {Networking and Internet Architecture (cs.NI), Emerging Technologies (cs.ET), Multimedia (cs.MM), Performance (cs.PF), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  publisher = {arXiv},
+}
+
+@Article{Fang2022,
+  author    = {Fang, Tzu‐Wei and Kubaryk, Adam and Goldstein, David and Li, Zhuxiao and Fuller‐Rowell, Tim and Millward, George and Singer, Howard J. and Steenburgh, Robert and Westerman, Solomon and Babcock, Erik},
+  journal   = {Space Weather},
+  title     = {Space Weather Environment During the SpaceX Starlink Satellite Loss in February 2022},
+  year      = {2022},
+  issn      = {1542-7390},
+  month     = nov,
+  number    = {11},
+  volume    = {20},
+  doi       = {https://doi.org/10.1029/2022SW003193},
+  publisher = {American Geophysical Union (AGU)},
+}
+
+@Article{Hapgood2022,
+  author    = {Hapgood, Mike and Liu, Huixin and Lugaz, Noé},
+  journal   = {Space Weather},
+  title     = {SpaceX—Sailing Close to the Space Weather?},
+  year      = {2022},
+  issn      = {1542-7390},
+  month     = mar,
+  number    = {3},
+  volume    = {20},
+  doi       = {https://doi.org/10.1029/2022SW003074},
+  publisher = {American Geophysical Union (AGU)},
+}
+
+@Article{Omorogiuwa2024,
+  author    = {Omorogiuwa, Osemwegie; Bello, Nosa; Akhihiero, Victor; Akpala, Somto},
+  journal   = {JES. Journal of Engineering Sciences},
+  title     = {Performance Test of Spacex’s Starlink: An Empirical Review},
+  year      = {2024},
+  issn      = {2356-8550},
+  month     = sep,
+  number    = {5},
+  pages     = {73--87},
+  volume    = {52},
+  doi       = {10.21608/jesaun.2024.300081.1347},
+  publisher = {Egyptian Knowledge Bank},
+}
+
+@InProceedings{Stock2022,
+  author    = {Stock, Gregory and Fraire, Juan A. and Hermanns, Holger},
+  booktitle = {2022 11th Advanced Satellite Multimedia Systems Conference and the 17th Signal Processing for Space Communications Workshop (ASMS/SPSC)},
+  title     = {Distributed On-Demand Routing for LEO Mega-Constellations: A Starlink Case Study},
+  year      = {2022},
+  pages     = {1-8},
+  doi       = {10.1109/ASMS/SPSC55670.2022.9914716},
+  keywords  = {Satellites;Space communications;Multimedia systems;Conferences;Signal processing algorithms;Low earth orbit satellites;Signal processing},
+}
+
+@InProceedings{DBLP:conf/hotnets/Handley18,
+  author    = {Mark Handley},
+  booktitle = {Proceedings of the 17th {ACM} Workshop on Hot Topics in Networks, HotNets 2018, Redmond, WA, USA, November 15-16, 2018},
+  title     = {Delay is Not an Option: Low Latency Routing in Space},
+  year      = {2018},
+  pages     = {85--91},
+  publisher = {{ACM}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/hotnets/Handley18.bib},
+  doi       = {10.1145/3286062.3286075},
+  timestamp = {Mon, 12 Nov 2018 09:36:18 +0100},
+  url       = {https://doi.org/10.1145/3286062.3286075},
+}
+
+@Article{DBLP:journals/comcom/ZhangY22,
+  author    = {Shengyu Zhang and Kwan L. Yeung},
+  journal   = {Comput. Commun.},
+  title     = {Scalable routing in low-Earth orbit satellite constellations: Architecture and algorithms},
+  year      = {2022},
+  pages     = {26--38},
+  volume    = {188},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/comcom/ZhangY22.bib},
+  doi       = {10.1016/J.COMCOM.2022.02.015},
+  timestamp = {Wed, 18 May 2022 10:21:43 +0200},
+  url       = {https://doi.org/10.1016/j.comcom.2022.02.015},
+}
+
+@InProceedings{DBLP:conf/pam/BhosaleSBG23,
+  author    = {Vaibhav Bhosale and Ahmed Saeed and Ketan Bhardwaj and Ada Gavrilovska},
+  booktitle = {Passive and Active Measurement - 24th International Conference, {PAM} 2023, Virtual Event, March 21-23, 2023, Proceedings},
+  title     = {A Characterization of Route Variability in {LEO} Satellite Networks},
+  year      = {2023},
+  editor    = {Anna Brunstr{\"{o}}m and Marcel Flores and Marco Fiore},
+  pages     = {313--342},
+  publisher = {Springer},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {13882},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/pam/BhosaleSBG23.bib},
+  doi       = {10.1007/978-3-031-28486-1\_14},
+  timestamp = {Fri, 24 Mar 2023 16:31:05 +0100},
+  url       = {https://doi.org/10.1007/978-3-031-28486-1\_14},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
