--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -7,6 +7,7 @@
 
 \input{./chapters/1-introduction/introduction.tex}
 \input{./chapters/1-introduction/motivation.tex}
+\input{./chapters/1-introduction/related-work.tex}
 \input{./chapters/1-introduction/research-questions.tex}
 
 
