Different form of citation

--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -595,7 +595,7 @@
 }
 
 @Article{Omorogiuwa2024,
-  author    = {Omorogiuwa, Osemwegie; Bello, Nosa; Akhihiero, Victor; Akpala, Somto},
+  author    = {Osemwegie Omorogiuwa; Nosa Bello; Victor Akhihiero; Somto Akpala},
   journal   = {JES. Journal of Engineering Sciences},
   title     = {Performance Test of Spacex’s Starlink: An Empirical Review},
   year      = {2024},
