--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -494,7 +494,7 @@
   url     = {https://www.pnas.org/doi/abs/10.1073/pnas.43.1.75},
 }
 
-@Misc{GF2023,
+@Misc{GFZ2023,
   author       = {Helmholtz-Zentrum Potsdam - Deutsches GeoForschungsZentrum GFZ},
   howpublished = {Website},
   title        = {Geomagnetic Kp index},
