Further traceroute analysis

--- a/src/db-controller/notebooks/traceroute/traceroute.ipynb
+++ b/src/db-controller/notebooks/traceroute/traceroute.ipynb
@@ -30,11 +30,34 @@
     "import datetime\n",
     "import ipinfo\n",
     "from geopy import distance\n",
+    "import duckdb\n",
     "\n",
     "access_token = \"49efa1a852217e\"\n",
     "handler = ipinfo.getHandler(access_token)\n",
     "\n",
-    "engine = create_engine(\"postgresql://postgres:postgres@vm-robert-richter.cloud.dhclab.i.hpi.de:5432/postgres\") # postgresql://user:password@host:port/databasename\")"
+    "parquet_dir = '../parquet'\n",
+    "\n",
+    "def country_name(country_iso):\n",
+    "    return pycountry.countries.get(alpha_2=country_iso).name\n",
+    "\n",
+    "def filter_for(df, name, value):\n",
+    "    return df.loc[df[name] == value]\n",
+    "\n",
+    "def filter_for_unequal(df, name, value):\n",
+    "    return df.loc[df[name] != value]\n",
+    "\n",
+    "def filter_for_range(df, name, lower_bound, upper_bound):\n",
+    "    return df[(df[name] >= lower_bound) & (df[name] < upper_bound)]\n",
+    "\n",
+    "def days_in_month(year, month):\n",
+    "    return monthrange(year, month)[1]\n",
+    "\n",
+    "def first_weekday_of_month(year, month):\n",
+    "    return monthrange(year, month)[0]\n",
+    "\n",
+    "def date_to_weekday(day, month, year):\n",
+    "    date = datetime(year, month, day)\n",
+    "    return day_name[date.weekday()]"
    ]
   },
   {
@@ -50,25 +73,237 @@
    "execution_count": 2,
    "id": "19dee323-bf83-47cd-9d57-a9ed48ece323",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{table}\n",
+      "\\caption{Success Rates of Traceroute per Target Server}\n",
+      "\\label{fig:traceroute-success-rates}\n",
+      "\\begin{tabular}{llrrr}\n",
+      "\\toprule\n",
+      " & destination & success_events & total_events & success_rate \\\\\n",
+      "\\midrule\n",
+      "0 & 202.12.27.33 & 1021441 & 2763754 & 0.369585 \\\\\n",
+      "1 & 199.7.91.13 & 1024454 & 2762612 & 0.370828 \\\\\n",
+      "2 & 193.0.14.129 & 1025631 & 2770381 & 0.370213 \\\\\n",
+      "3 & 192.36.148.17 & 223088 & 2763589 & 0.080724 \\\\\n",
+      "4 & 192.33.4.12 & 1022587 & 2763832 & 0.369989 \\\\\n",
+      "5 & 192.5.5.241 & 53447 & 2764536 & 0.019333 \\\\\n",
+      "6 & 198.97.190.53 & 961501 & 2762322 & 0.348077 \\\\\n",
+      "7 & 192.203.230.10 & 161792 & 2754657 & 0.058734 \\\\\n",
+      "8 & 199.7.83.42 & 1024109 & 2764224 & 0.370487 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\\end{table}\n",
+      "\n",
+      "\\begin{table}\n",
+      "\\caption{Servers that were never reached during a Traceroute Measurement}\n",
+      "\\label{fig:unreachable servers}\n",
+      "\\begin{tabular}{l}\n",
+      "\\toprule\n",
+      "Destination \\\\\n",
+      "\\midrule\n",
+      "45.33.72.12 \\\\\n",
+      "193.0.19.60 \\\\\n",
+      "170.247.170.2 \\\\\n",
+      "104.237.152.132 \\\\\n",
+      "198.41.0.4 \\\\\n",
+      "78.46.48.134 \\\\\n",
+      "139.162.27.28 \\\\\n",
+      "193.0.19.59 \\\\\n",
+      "199.9.14.201 \\\\\n",
+      "213.133.109.134 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\\end{table}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Enable or disable here\n",
-    "if (False):\n",
-    "    df = pd.read_sql_query(\"\"\"select * from (\n",
-    "    \tselect msm_id, count(*) as success_events\n",
-    "    \tfrom traceroute_data td\n",
-    "    \twhere td.destination_ip_responded = true\n",
-    "    \tgroup by msm_id\n",
-    "    ) td1\n",
-    "    join\n",
-    "    (\n",
-    "    \tselect msm_id, count(*) as failure_events\n",
-    "    \tfrom traceroute_data td\n",
-    "    \twhere td.destination_ip_responded = false \n",
-    "    \tgroup by msm_id\n",
-    "    ) td2\n",
-    "    on td1.msm_id = td2.msm_id\n",
-    "    \"\"\", con=engine)"
+    "parquet_file = f'{parquet_dir}/traceroute_data.parquet'\n",
+    "\n",
+    "all = duckdb.sql(f'''\n",
+    "    SELECT DISTINCT destination FROM '{parquet_file}';\n",
+    "''').to_df()['destination'].tolist()\n",
+    "\n",
+    "res = duckdb.sql(f'''\n",
+    "    SELECT t1.destination, success_events, total_events, success_events / total_events as success_rate FROM (\n",
+    "        SELECT destination, COUNT(*) as total_events FROM '{parquet_file}' GROUP BY destination\n",
+    "    ) t1\n",
+    "    JOIN (\n",
+    "        SELECT destination, COUNT(*) as success_events FROM '{parquet_file}' WHERE destination_ip_responded = true GROUP BY destination\n",
+    "    ) t2 ON t1.destination = t2.destination;\n",
+    "''')\n",
+    "\n",
+    "df = res.to_df()\n",
+    "\n",
+    "print(df.to_latex(caption='Success Rates of Traceroute per Target Server', label='fig:traceroute-success-rates'))\n",
+    "\n",
+    "unsuccessful_servers = pd.DataFrame([ v for v in all if v not in df['destination'].tolist()], columns=['Destination'])\n",
+    "print(unsuccessful_servers.to_latex(index=False, caption='Servers that were never reached during a Traceroute Measurement', label=\"fig:unreachable servers\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f08068bc-af1d-4e1c-9930-05ad443b9ae3",
+   "metadata": {},
+   "source": [
+    "## Latency per Hop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "495b9fe0-7e0e-47de-ad41-24ac0a75a233",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51f5109746454ad8954980c836089995",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>destination</th>\n",
+       "      <th>result</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>192.33.4.12</td>\n",
+       "      <td>[{\"hop\":1,\"result\":[{\"x\":\"*\"},{\"x\":\"*\"},{\"x\":\"...</td>\n",
+       "      <td>DE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>192.33.4.12</td>\n",
+       "      <td>[{\"hop\":1,\"result\":[{\"from\":\"100.64.0.1\",\"ttl\"...</td>\n",
+       "      <td>DE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>192.33.4.12</td>\n",
+       "      <td>[{\"hop\":1,\"result\":[{\"x\":\"*\"},{\"x\":\"*\"},{\"x\":\"...</td>\n",
+       "      <td>DE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>192.33.4.12</td>\n",
+       "      <td>[{\"hop\":1,\"result\":[{\"from\":\"100.64.0.1\",\"ttl\"...</td>\n",
+       "      <td>DE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>192.33.4.12</td>\n",
+       "      <td>[{\"hop\":1,\"result\":[{\"x\":\"*\"},{\"x\":\"*\"},{\"x\":\"...</td>\n",
+       "      <td>DE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>451543</th>\n",
+       "      <td>199.7.83.42</td>\n",
+       "      <td>[{\"hop\":1,\"result\":[{\"from\":\"10.190.1.254\",\"tt...</td>\n",
+       "      <td>DE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>451544</th>\n",
+       "      <td>199.7.83.42</td>\n",
+       "      <td>[{\"hop\":1,\"result\":[{\"from\":\"10.190.1.254\",\"tt...</td>\n",
+       "      <td>DE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>451545</th>\n",
+       "      <td>199.7.83.42</td>\n",
+       "      <td>[{\"hop\":1,\"result\":[{\"from\":\"10.190.1.254\",\"tt...</td>\n",
+       "      <td>DE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>451546</th>\n",
+       "      <td>199.7.83.42</td>\n",
+       "      <td>[{\"hop\":1,\"result\":[{\"from\":\"10.190.1.254\",\"tt...</td>\n",
+       "      <td>DE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>451547</th>\n",
+       "      <td>199.7.83.42</td>\n",
+       "      <td>[{\"hop\":1,\"result\":[{\"from\":\"10.190.1.254\",\"tt...</td>\n",
+       "      <td>DE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>451548 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        destination                                             result country\n",
+       "0       192.33.4.12  [{\"hop\":1,\"result\":[{\"x\":\"*\"},{\"x\":\"*\"},{\"x\":\"...      DE\n",
+       "1       192.33.4.12  [{\"hop\":1,\"result\":[{\"from\":\"100.64.0.1\",\"ttl\"...      DE\n",
+       "2       192.33.4.12  [{\"hop\":1,\"result\":[{\"x\":\"*\"},{\"x\":\"*\"},{\"x\":\"...      DE\n",
+       "3       192.33.4.12  [{\"hop\":1,\"result\":[{\"from\":\"100.64.0.1\",\"ttl\"...      DE\n",
+       "4       192.33.4.12  [{\"hop\":1,\"result\":[{\"x\":\"*\"},{\"x\":\"*\"},{\"x\":\"...      DE\n",
+       "...             ...                                                ...     ...\n",
+       "451543  199.7.83.42  [{\"hop\":1,\"result\":[{\"from\":\"10.190.1.254\",\"tt...      DE\n",
+       "451544  199.7.83.42  [{\"hop\":1,\"result\":[{\"from\":\"10.190.1.254\",\"tt...      DE\n",
+       "451545  199.7.83.42  [{\"hop\":1,\"result\":[{\"from\":\"10.190.1.254\",\"tt...      DE\n",
+       "451546  199.7.83.42  [{\"hop\":1,\"result\":[{\"from\":\"10.190.1.254\",\"tt...      DE\n",
+       "451547  199.7.83.42  [{\"hop\":1,\"result\":[{\"from\":\"10.190.1.254\",\"tt...      DE\n",
+       "\n",
+       "[451548 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parquet_file = f'{parquet_dir}/traceroute_data.parquet'\n",
+    "\n",
+    "df = duckdb.sql(f'''\n",
+    "    SELECT destination, result, country FROM '{parquet_dir}/ripe_atlas_probe_data.parquet'\n",
+    "    JOIN '{parquet_file}' ON id = prb_id\n",
+    "    WHERE destination_ip_responded = true and country = 'DE';\n",
+    "''').to_df();\n",
+    "\n",
+    "df"
    ]
   },
   {
