Text improvements in background part

--- a/tex/thesis/acronyms.tex
+++ b/tex/thesis/acronyms.tex
@@ -14,4 +14,5 @@
 	\acro{GS}{Ground~Station}
 	\acro{CFR}{Cloudflare Radar}
 	\acro{IQI}{Internet Quality Index}
+	\acro{SNO}{Satellite Network Operator}
 \end{acronym}
