Add analysis about hops of traceroute

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -70,6 +70,9 @@
 %	Resilience
 %
 
+% Traceroute Analysis
+\input{./chapters/4-results/traceroute/hops.tex}
+
 % Disconnect Events
 \input{./chapters/4-results/disconnect_events/disconnect-events.tex}
 
