Latency hop histograms or 4

--- a/src/db-controller/notebooks/latency-per-hop.ipynb
+++ b/src/db-controller/notebooks/latency-per-hop.ipynb
@@ -262,8 +262,7 @@
     "    hop_ratios = filter_for_unequal(pd.DataFrame(data=ratios, columns=['Hops', 'Percentage of Total Number of Measurements']), 'Percentage of Total Number of Measurements', \"0.0 %\")\n",
     "    print(hop_ratios)\n",
     "\n",
-    "#for c in countries:\n",
-    "for c in ['CA', 'PH', 'FR', 'DE']:\n",
+    "for c in countries:\n",
     "    hops_for_country(c)"
    ]
   }
