Remove old dangling chapter for tracerotue analysis

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -70,6 +70,9 @@
 %	Resilience
 %
 
+% Routing
+\input{./chapters/4-results/traceroute/traceroute-target-reachability.tex}
+
 % Traceroute Analysis
 \input{./chapters/4-results/traceroute/hops.tex}
 
@@ -79,14 +82,12 @@
 % Solarmagnetic Storms
 \input{./chapters/4-results/solarmagnetic-storms/storms.tex}
 
-% Routing
-\input{./chapters/4-results/traceroute/starlink-traceroutes.tex}
-
 % Limitations and Future Work
 %	- Limitation of Probe Availability (only selected ones on RIPE Atlas)
 %	- Limitation of Service Availability (Starlink only)
 %	- Limitation of IPInfo Database
 %	- Limitation of Black-Box approach (no insight in Starlink intrinsics)
+%	- OONI data -> Censorship? Opportunities or challenges with Starlink?
 
 % Conclusion
 \chapter{Conclusions \& Outlook}
