Adding satellite development as pdf

--- a/src/db-controller/notebooks/satellite-constellations.ipynb
+++ b/src/db-controller/notebooks/satellite-constellations.ipynb
@@ -2476,7 +2476,7 @@
     "plt.xticks(np.arange(min(vdf.columns), max(vdf.columns)+1, 1), rotation=45)\n",
     "plt.yscale('log')  # Set y-axis to logarithmic scale\n",
     "plt.tight_layout()\n",
-    "plt.savefig('satellite-dev.png')"
+    "plt.savefig('satellite-dev.pdf')"
    ]
   },
   {
