Reference to blog post about RIPE Atlas infrastructure migration

--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -663,4 +663,13 @@
   url       = {https://doi.org/10.1007/978-3-031-28486-1\_14},
 }
 
+@Article{Kisteleki2024,
+  author   = {Robert Kisteleki},
+  journal  = {RIPE Labs},
+  title    = {A Detailed Look at Our Recent RIPE Atlas Infrastructure Migration},
+  year     = {2024},
+  month    = oct,
+  keywords = {RIPE Atlas,Disconnect Events,Infrastructure Migration},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
