Motivation and Outline of thesis

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -3,10 +3,10 @@
 %	- RQs
 %	- Contributions
 %	- Outline
-\chapter{Introduction}
+\chapter{Introduction} \label{sec:introduction}
 
-\input{./chapters/1-introduction/introduction.tex}
 \input{./chapters/1-introduction/motivation.tex}
+\input{./chapters/1-introduction/thesis-outline.tex}
 \input{./chapters/1-introduction/related-work.tex}
 \input{./chapters/1-introduction/research-questions.tex}
 
@@ -15,7 +15,7 @@
 %	- Networked Satellite Systems
 %	- Starlink
 %	- Routing: ISLs & Bent-Pipes
-\chapter{Background}
+\chapter{Background} \label{sec:background}
 
 \input{./chapters/2-background/sat-com-explained.tex}
 \input{./chapters/2-background/usecase-networked-satellite-systems.tex}
@@ -32,7 +32,7 @@
 %	- Data Sources
 %	- Created Data Set
 %	- IPInfo
-\chapter{Methodology}
+\chapter{Methodology} \label{sec:methodology}
 
 \input{./chapters/3-methodology/measurement-platforms.tex}
 \input{./chapters/3-methodology/methodology.tex}
@@ -90,7 +90,7 @@
 %	- OONI data -> Censorship? Opportunities or challenges with Starlink?
 
 % Conclusion
-\chapter{Conclusions \& Outlook}
+\chapter{Conclusions \& Outlook} \label{sec:conclusion}
 \input{conclusions/conclusions}
 
 
