--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -672,4 +672,17 @@
   keywords = {RIPE Atlas,Disconnect Events,Infrastructure Migration},
 }
 
+@Article{Davies1980,
+  author    = {Davies, Kenneth},
+  journal   = {Space Science Reviews},
+  title     = {Recent progress in satellite radio beacon studies with particular emphasis on the ATS-6 radio beacon experiment},
+  year      = {1980},
+  issn      = {1572-9672},
+  month     = apr,
+  number    = {4},
+  volume    = {25},
+  doi       = {10.1007/BF00241558},
+  publisher = {Springer Science and Business Media LLC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
