--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -685,4 +685,18 @@
   publisher = {Springer Science and Business Media LLC},
 }
 
+@InProceedings{DBLP:conf/5gwf/HofmannK19,
+  author    = {Christian A. Hofmann and Andreas Knopp},
+  booktitle = {2nd {IEEE} 5G World Forum, 5GWF 2019, Dresden, Germany, September 30 - October 2, 2019},
+  title     = {Direct Access to {GEO} Satellites: An Internet of Remote Things Technology},
+  year      = {2019},
+  pages     = {578--583},
+  publisher = {{IEEE}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/5gwf/HofmannK19.bib},
+  doi       = {10.1109/5GWF.2019.8911640},
+  timestamp = {Fri, 09 Apr 2021 18:41:29 +0200},
+  url       = {https://doi.org/10.1109/5GWF.2019.8911640},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
