--- a/tex/thesis/conclusions/conclusions.tex
+++ b/tex/thesis/conclusions/conclusions.tex
@@ -1,2 +1,89 @@
-% This is where you conclude your thesis.
+\chapter{Conclusions \& Outlook} \label{sec:conclusion}
 
+In this thesis, we looked at the performance and resilience of the Starlink
+satellite system. The main research questions are listed in
+Chapter~\ref{sec:research-questions}.
+
+To answer research question 1, we looked at the TLS handshake latency in the
+individual years 2022~--~2024 and found that Starlink latency is at
+approximately 80~ms median in 2024. However, it has to be noted that the
+Starlink latency improved since 2022 in average, median, and minimal latency
+(see Table~\ref{fig:weekday-statistics}).
+
+We observed a strange behavior in the latency that we call the
+"two-bell-pattern". It is visible in Figure~\ref{fig:latency-histogram-1} and
+\ref{fig:latency-histogram-2}. It describes the behavior of serving two ranges
+of latencies especially well. First lower latencies ($\approx$~80~--100~ms) and
+second higher latencies ($\approx$~150~--250~ms) with a major gap in between.
+It is unclear what the cause of this pattern is.
+
+Additionally, we wanted to find out about diurnal variation. Looking at data
+from April~2024, we found that there is no difference between the individual
+week days (see Figure~\ref{fig:latencies-per-weekday}). However, there is a
+strong variation between the hours of the day. For example, in the night, one
+can expect lower latencies compared to lunchtime.
+
+We also looked at packet loss and noted a high variation by country. Countries
+like the Philippines have packet loss ratios of up to 18\%, while Czechia and
+Chile achieve less than 0.25\%. However, also highly modernized countries like
+Germany and the Netherlands experience in high packet loss ratios (see
+Table~\ref{fig:packetloss-total}). In the end, for most countries have a packet
+loss of 1 to 4\%.
+
+We expected a correlation in packet loss and latency. We correlated the two
+values and separated by country. Table~\ref{fig:packetloss-latency-correlation}
+shows the resulting correlation values, where 0 indicates orthogonal random
+variables and 1 or -1 indicates a strong correlation. Some countries hold
+values that allow to make a conclusion, but others do not. We assumed that the
+number of probes played a role, but were able to eliminate it as a factor for
+the behavior (see
+Table~\ref{fig:packetloss-latency-number-probes-correlation}). The correlation
+might be related to currently unknown contributing factors that need to be
+taken into consideration before drawing a conclusion. Therefore, we cannot make
+a statement about the correlation of latency and packet loss. Research question
+2 can consequently not be answered by the research.
+
+To answer research question 3, we further looked at the routing of the Starlink
+satellite system. First, we wanted to find out the number of hops a route
+usually takes. We found that most routes take 10 to 14 hops (see
+Figure~\ref{fig:hops-per-measument}). The histogram for the hops is also
+showing the mentioned "two-bell-pattern". Both observations might be related,
+which was not further researched in this thesis.
+
+We also observed the change in latency per hop (i.e., what latency does the
+traceroute measurement report in each hop). We found that usually there is a
+spike in latency in the second hop. Likely, the spike originates from routing
+through the Starlink satellite constellation, which is not reflected in the
+traceroute results (see Figures~\ref{fig:latency-change-per-hop-1} and
+\ref{fig:latency-change-per-hop-2}). We also found consequent spikes in
+latency. However, mapping the hops to their predominant ASN, we found that
+those spikes lay outside the Starlink domain. Starlink has an opportunity of
+increasing their performance at this point, but likely other entities are
+actually responsible for the spike.
+
+Finally, we looked at the influence of solar magnetic storms on the Starlink
+latency and found that there is no correlation (i.e., both random
+variables are orthogonal).
+
+\section{Future Work}
+
+During our work, we faced several limitations that require more effort. The
+first limitation were the probes that we did not hold ourselves, but originate
+from RIPE~Atlas. That means unknown people in the world set them up as they
+wished. This might have corrupted the data. Ideally, the probes are operated by
+the researchers themselves, but this a costly and tedious thing to do.
+
+Further, we did not explore quite some directions due to time constraints. The
+two-bell-pattern is an interesting observation that needs confirmation and
+explanation as it was not clear why it occurred. It should also be correlated
+with the similar observation in number of hops.
+
+Also, we did not look into detail how Starlink routes packets on their
+satellite constellation and later on in terrestrial internet. It is clear that
+Starlink cannot give away complete responsibility after a packet is handed to a
+different AS. However, it is unclear what a proper model for such a routing
+behavior would be.
+
+Mentioned in Chapter~\ref{sec:bent-pipes}, \ac{SNO}s largely rely on \ac{ISL}s.
+However, researchers still discuss the impact of \ac{ISL}s. It should be
+researched what impact they have and how their ideal usage would work.
