--- a/tex/thesis/preface/acknowledgments.tex
+++ b/tex/thesis/preface/acknowledgments.tex
@@ -1,2 +1,8 @@
-% Here you can write whom you want to thank.
+To everybody who supported me in my work, thank you very much! Especially I'd
+like to thank the Villenbewohner, Tobi, Jonas, Luc, Lara, Fabi, and Moritz, for
+all the great time we had. The endless table football sessions, where we held
+the moral high every other day and took care of the Villa, after we had a
+coffee too much.
 
+Also, I'd like to highlight the valuable learnings the Vasilis and Vaibhav
+allowed me to have and for this interesting topic.
